[test] Migrate integration tests from Apache HttpClient to java.net.http
Rewrites the HTTP-client side of the integration test suite onto the JDK
java.net.http.HttpClient, removing Apache HttpClient from the test scope (the
WebDAV tests are migrated separately in the following commit).

- AbstractHttpTest: the shared test HTTP infrastructure now builds on
  java.net.http.HttpClient, exposing newHttpClient(), authenticatedRequest(),
  basicAuthorizationHeader(), executeForStatus(), executeForStatusAndBody(),
  assertRequestResponse() and the HttpResponseResult record (no Apache HC).
- Integration tests across exist-core, restxq, file and persistentlogin migrated
  to those helpers; behavior and assertions unchanged. Requests that need
  preemptive HTTP Basic auth set the Authorization header explicitly.
- GetParameterTest sends a multipart/form-data body, so it uses Methanol's
  MultipartBodyPublisher (Methanol added to the BOM and as an exist-core test
  dependency; exist-core also now publishes its test-jar for the new module).
- Dropped the now-unused Apache HttpClient test dependencies from exist-core,
  restxq, file and persistentlogin.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>