@@ -21,44 +21,42 @@
  */
 package org.exist.xquery.functions.response;
 
+import static java.net.HttpURLConnection.HTTP_OK;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertArrayEquals;
 
-import java.io.IOException;
+import java.net.URI;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.commons.codec.binary.Base64;
 
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpStatus;
-import org.apache.http.client.fluent.Request;
 import org.exist.http.RESTTest;
-import org.apache.commons.io.output.UnsynchronizedByteArrayOutputStream;
 import org.junit.Test;
 
 /**
  * Tests expected behaviour of response:stream-binary() XQuery function
- * 
+ *
  * @author <a href="mailto:adam@exist-db.org">Adam Retter</a>
  * @version 1.0
  */
 public class StreamBinaryTest extends RESTTest {
 
 	@Test
-	public void testStreamBinary() throws IOException {
-		
+	public void testStreamBinary() throws Exception {
+
 		final String testValue = "hello world";
 		final String xquery = "response:stream-binary(xs:base64Binary('" +  Base64.encodeBase64String(testValue.getBytes())  + "'), 'application/octet-stream', 'test.bin')";
 
-		final Request get = Request.Get(getCollectionRootUri() + "?_query=" + URLEncoder.encode(xquery, "UTF-8") + "&_indent=no");
+		final HttpRequest get = HttpRequest.newBuilder(URI.create(getCollectionRootUri() + "?_query=" + URLEncoder.encode(xquery, StandardCharsets.UTF_8) + "&_indent=no")).GET().build();
 
-		final HttpResponse response = get.execute().returnResponse();
-		assertEquals(HttpStatus.SC_OK, response.getStatusLine().getStatusCode());
+		final HttpClient client = newHttpClient();
+		final HttpResponse<byte[]> response = client.send(get, HttpResponse.BodyHandlers.ofByteArray());
+		assertEquals(HTTP_OK, response.statusCode());
 
-		try (final UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream()) {
-			response.getEntity().writeTo(os);
-
-			assertArrayEquals(testValue.getBytes(), os.toByteArray());
-		}
+		assertArrayEquals(testValue.getBytes(), response.body());
 	}
 }
